...
            colourIndex = snapshot.data;
            return loading
                ? Loading()
                : Scaffold(
                    backgroundColor: globals.themeColours[colourIndex],
                    appBar: AppBar(
                      title: Text('Edit Profile'),
                      centerTitle: true,
                      elevation: 0.0,
                      backgroundColor: globals.themeColours[colourIndex],
                    ),
                    body: Container(
                      child: Padding(
...
                                  padding: EdgeInsets.symmetric(vertical: 15),
                                  child: Column(
                                    children: <Widget>[
                                      Form(
                                          key: _emailKey,
                                          child: TextFormField(
                                            key: Key("Edit profile new email"),
                                            onChanged: (val) {
                                              setState(() {
                                                newEmail = val;
                                              });
                                            },
                                            decoration: InputDecoration(
...
                                                    .validateEmail(val!))
                                                ? 'enter a valid email'
                                                : null,
                                          )),
                                      ElevatedButton(
                                        style: ElevatedButton.styleFrom(primary: globals.themeColours[colourIndex]),
                                        key: Key("Edit profile change email button"),
                                          onPressed: () async {
                                            if (_emailKey.currentState!
                                                .validate()) {
                                              setState(() {
                                                loading = true;
                                              });
...
                                              color: globals
                                                  .themeColours[colourIndex],
                                              fontWeight: FontWeight.bold)),
                                      Form(
                                        key: _passwordKey,
                                        child: TextFormField(
                                          key: Key("Edit profile new password"),
                                          onChanged: (val) {
                                            setState(() {
                                              newPassword = val;
                                            });
                                          },
                                          decoration: InputDecoration(
...
                                      SizedBox(
                                        height: 40,
                                      ),
                                      Form(
                                        key: _confirmPasswordKey,
                                        child: TextFormField(
                                          key: Key("Edit profile new password confirmation"),
                                          onChanged: (val) {
                                            setState(() {
                                              confirmPassword = val;
                                            });
                                          },
                                          decoration: InputDecoration(
...
                                      ),
                                      SizedBox(
                                        height: 20,
                                      ),
                                      ElevatedButton(
                                          style: ElevatedButton.styleFrom(primary: globals.themeColours[colourIndex]),
                                          key: Key("Edit profile change password button"),
                                          onPressed: () async {
                                            if (_passwordKey.currentState!
                                                    .validate() &&
                                                _confirmPasswordKey
                                                    .currentState!
                                                    .validate()) {
...
